[package]
authors = [
    "Vadzim Dambrouski <pftbest@gmail.com>",
    "Jorge Aparicio <jorge@japaric.io>",
    "Austin Hendrix <namniart@gmail.com>"
]
description = "Peripheral access API for MSP430FR2433 microcontroller"
documentation = "https://docs.rs/msp430fr2433"
keywords = ["no-std", "msp430", "ti", "launchpad"]
license = "MIT OR Apache-2.0"
name = "msp430fr2433"
repository = "https://github.com/trainman419/msp430fr2433"
version = "0.1.0"

[dependencies]
bare-metal = "0.1.0"
msp430 = "0.1.0"
vcell = "0.1.0"

[dependencies.msp430-rt]
optional = true
version = "0.1.0"

[features]
rt = ["msp430-rt"]
